yaml/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: ve-landing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: harbor.home.virtualelephant.com/ve-lab/flask-app:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /app/static
              name: ve-landing-storage
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      volumes:
        - name: ve-landing-storage
          persistentVolumeClaim:
            claimName: ve-landing-pvc
