yaml/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ve-landing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: ve-landing-storage
          persistentVolumeClaim:
            claimName: ve-landing-pvc
      containers:
        - name: nginx
          image: harbor.home.virtualelephant.com/ve-lab/nginx-landing:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: ve-landing-storage
              mountPath: /usr/share/nginx/html
      volumes:
        - name: default-files
          configMap:
            name: default-static-files
