yaml/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: ve-landing
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  clusterIP: None  # Use headless service for internal load balancing
