yaml/haproxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ve-landing-ingress
  namespace: ve-landing
  annotations:
    ingress.class: "haproxy"
spec:
  rules:
  - host: landing.home.virtualelephant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
